--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,16 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: rgb(45, 0, 61);
+  background: linear-gradient(
+    45deg,
+    rgba(45, 0, 61, 1) 0%,
+    rgba(0, 11, 55, 1) 100%
+  );
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
